_sass/chulapa-classes.scss
/* ... */
// Normalize carousel

.chulapa-carousel {
  height: 75vh;
  object-fit: contain;
}

.chulapa-border-card-index {
  border-color: $indexcards-chulapa-border-color;
}

// Chulapa disable fa animation

.chulapa-fa-static {
  .fa,
  .far,
  .fas,
  .fal,
  .fab,
  .fa-solid,
  .fa-regular,
  .fa-light,
  .fa-thin,
  .fa-duotone,
  .fa-sharp,
  .fa-brands {
    -webkit-transition: none !important;
    -moz-transition: none !important;
    -o-transition: none !important;
    -ms-transition: none !important;
    transition: none !important;

    &:hover {
      -webkit-transform: none;
      -ms-transform: none;
      -o-transform: none;
      transform: none;
    }
  }
}

// Styles for sidebar

.chulapa-btn-sidebar {
  bottom: 1.05 * map-get($spacers, 5);
  left: 0;
  margin-left: -400px;
  opacity: 0.4;
  z-index: 1099;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.chulapa-btn-nofocus {
  &.close {
    text-shadow: none;
    opacity: 0.6;

    &:before {
      content: "" !important;
    }
  }

  &:focus {
    outline: 0;
    text-shadow: none;
  }
}

.bs-canvas-overlay {
  opacity: 0;
  z-index: -1;
  &.show {
    opacity: 0.3;
    z-index: 20001;
  }
}

.bs-canvas {
  top: 0;
  width: 300px;
  margin-left: -300px;
  z-index: 20010;
  overflow-x: hidden;
  overflow-y: auto;
}
.bs-canvas-left {
  left: 0;
}
.bs-canvas-anim {
  transition: all 0.4s ease-out;
  -webkit-transition: all 0.4s ease-out;
  -moz-transition: all 0.4s ease-out;
  -ms-transition: all 0.4s ease-out;
}

// Classes for qusdis

@mixin ch_bcolor($color1, $color2) {
    @if $color1==$color2 {
      @extend .btn-secondary;
  } @else {
      @extend .btn-primary;
  }
}

$cusdis-text-color: color-contrast($footer-chulapa-bg-color, $black, $white);

#ch-cusdis {
  background-color: $footer-chulapa-bg-color;
  color: $cusdis-text-color;
  overflow: hidden;

  .bg-blue-500 {
    @extend .bg-success;
    color: color-contrast($success, $black, $white);
    margin-left: 15vw;
    margin-right: 15vw;
    padding: 1rem !important;
    font-size: $font-size-sm;
    text-align: center;
    border-radius: $input-border-radius-lg;
  }

  input,
  textarea {
    &.bg-transparent:focus {
      background-color: white !important;
      color: $black !important;
    }

    @extend .form-control;
  }

  button {
    &.bg-gray-200 {
      @extend .btn;
      font-weight: $headings-font-weight;
      font-family: $headings-font-family;
      @include ch_bcolor($primary, $footer-chulapa-bg-color);
    }
  }

  .border-color-gray-200 {
    border-color: $cusdis-text-color;
  }

  //Name
  .font-medium {
    color: $footer-chulapa-text-color;
    font-family: $headings-font-family;
    font-weight: $font-weight-bold;
  }

  .text-gray-500 {
    //Comment
    color: $cusdis-text-color;
    &.text-sm {
      //Time
      @extend time;
      color: $footer-chulapa-text-color;
      font-weight: $font-weight-normal;
    }
  }

  //Reply button
  button {
    &.text-gray-500 {
      &.text-sm {
        font-family: $font-family-base;
        font-weight: $font-weight-normal;
        @extend .btn;
        @extend .btn-sm;
        @include button-variant($footer-chulapa-bg-color,$footer-chulapa-text-color);
      }
    }
  }

  .border-color-gray-200 {
    border-color: $footer-chulapa-text-color;
  }

  .underline {
    color: $footer-chulapa-text-color;
    text-decoration: none;
    font-weight: bold;

    @include hover-focus() {
      color: $footer-chulapa-hover-color;
    }
  }
}

//wellcomments

$wlc-text-color: color-contrast($footer-chulapa-bg-color, $black, $white);

#welcomments__container {
  text-align: left;
  font-family: $font-family-base;

  //Name
  .welcomments__comments-title,
  .welcomments__author-name {
    color: $footer-chulapa-text-color;
    font-family: $headings-font-family;
    font-weight: $font-weight-bold;
  }
  //Time
  .welcomments__comment-time {  
    @extend time;
    time {
      color: $footer-chulapa-text-color;
      font-weight: $font-weight-normal;
    }  
  }

  .welcomments__comment .welcomments__comment-message, .welcomments__email-notice, .welcomments__markdown-notice {
    color: $wlc-text-color;
    font-weight: $font-weight-normal;
    pre {
      background-color: $wlc-text-color;
    }
    a {
      color: $wlc-text-color;
      @include hover-focus() {
          color: $footer-chulapa-hover-color;
      }
    }
  }

  $welc_levs: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;

  @each $l in $welc_levs {
    .welcomments__nesting-level-#{$l} {
      border-color: $footer-chulapa-text-color;
    }
  }

  //Reply button
  .welcomments__comment-reply-link {
    font-family: $font-family-base;
    @extend .btn;
    @extend .btn-sm;
    @include button-variant(
      $footer-chulapa-bg-color,
      $footer-chulapa-text-color
    ); 
  }

  input,
  textarea {
    @extend .form-control;
  }

  label {
    font-size: $font-size-sm;
    font-family: $font-family-base;
    color: $footer-chulapa-text-color;
    .welcomments__optional-notice {
      color: $footer-chulapa-text-color;
      opacity: 0.8;
    }
  }

  .welcomments__submit-button {
    @extend .btn;
    font-weight: $headings-font-weight;
    font-family: $headings-font-family;
    @include ch_bcolor($primary, $footer-chulapa-bg-color);
  }
  
  .welcomments__form-group {
    @extend .form-group;
  }
  
}

